--- a/Web/src/main/App.css
+++ b/Web/src/main/App.css
@@ -1,7 +1,9 @@
+body {
+  background-color: rgb(245, 245, 245);
+}
 .App {
   text-align: center;
-  background-color: rgb(26, 32, 39);
-  padding: 30px 5px 0px 5px;
+  padding: 5px 5px 0px 5px;
 }
 .App-logo {
   height: 40vmin;
